grid toolbar no longer hidden by invisible empty div above it.  full gridplot toolbar clickable

--- a/bokehjs/src/less/bokeh.less
+++ b/bokehjs/src/less/bokeh.less
@@ -14,7 +14,9 @@ svg {
   padding-top: 5px;
   padding-bottom: 5px;
 }
-
+.grid_plot .button_bar {
+ display:none;
+}
 .button_bar > button{
 }
 
